Corrected chat width on firefox

--- a/public_html/layouts/basic/styles/layout/_Header.scss
+++ b/public_html/layouts/basic/styles/layout/_Header.scss
@@ -110,7 +110,7 @@
 	position: fixed !important;
 	z-index: 1070;
 	overflow: hidden;
-	width: -webkit-fill-available;
+	width: 100%;
 
 	.modal-content {
 		height: 100%;
